--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,14 @@
 h1{
     text-align: center;
     font-family: 'Share Tech Mono', monospace ;
+    color: black;
+}
+body{
+    margin-top: 100px;
+    background-color: darkcyan;
+}
+option{
+    background-color: white;
 }
 #calculator{
     background: #1c4670;
